<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <TextView
        android:id="@+id/tvMainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_calculator_text"
        android:textColor="#FCFF00"
        android:textSize="33sp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="#FF0000"
        android:text="@string/from_text"
        android:textSize="35sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/etStartStation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_rounded_text"
        android:padding="5dp"
        />
    <EditText
        android:id="@+id/etStartStation"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMainText"
        android:background="#2A2727"
        android:hint="@string/hint_enter_text"
        android:textColorHint="#80FCFF00"
        android:textSize="35sp"
        android:textColor="#FCFF00"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/tvEndStation"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="#FF0000"
        android:text="@string/to_text"
        android:textSize="35sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/etStartStation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_rounded_text"
        android:padding="5dp"
        android:layout_marginTop="85dp"
        />

    <EditText
        android:id="@+id/etEndStation"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEndStation"
        android:background="#2A2727"
        android:hint="@string/hint_enter_text"
        android:textColorHint="#80FCFF00"
        android:textSize="35sp"
        android:textColor="#FCFF00"
        android:gravity="center_vertical"/>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_text"
        android:textColor="#FCFF00"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_margin="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEndStation"
         />
</androidx.constraintlayout.widget.ConstraintLayout>